# ProjectStarterKit

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
Code/inc/: log_messages.hpp
Code/src/: log_messages.cpp
Doc/: Doxyfile  cmake.md  codeFormatter.md  doxygenDocumentation.md  gettingStarted.md  git.md  mainDocPage.hpp  test.md
Doc/html/: _project.html  _project_documentation2.html  _r_e_a_d_m_e_8md.html  _r_e_f__c_m_a_k_e__t_o_o_l.html  _r_e_f__c_o_d_e__f_o_r_m_a_t_t_e_r.html  _r_e_f__g_e_t_t_i_n_g__s_t_a_r_t_e_d.html  _r_e_f__g_i_t__t_o_o_l.html  _r_e_f__s_e_c_t_i_o_n_2.html  _r_e_f__section2.html  _r_e_f__t_e_s_t__t_o_o_l.html  _secction.html  _section.html  cmake_8md.html  code_formatter_8md.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_23fdee2f6995db16c755697cdf620cf4.js  dir_562250f81d431c2e4bf06f5f84066d42.html  dir_562250f81d431c2e4bf06f5f84066d42.js  dir_78b01f221e5d69dbe1f7a50c401396d7.html  dir_f8d8e0a4ca34514f836ebac25097d4e4.html  dir_f8d8e0a4ca34514f836ebac25097d4e4.js  doc1_8h.html  doc1_8h_source.html  doc1_8hpp.html  doc1_8hpp_source.html  doc2_8hpp.html  doc2_8hpp_source.html  doc_8hpp.html  doc_8hpp_source.html  doxygen.css  doxygen_crawl.html  doxygen_documentation_8md.html  files.html  files_dup.js  getting_started_8hpp.html  getting_started_8hpp_source.html  getting_started_8md.html  git_8md.html  globals.html  globals_func.html  (+20 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  files_0.js  files_1.js  files_2.js  files_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  pages_c.js  pages_d.js  pages_f.js  searchdata.js
Tests/: CMakeLists.txt  main.cpp
inc/: log_messages.hpp
src/: log_messages.cpp
